# context-forge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  release-please-config.json  release.toml
.github/agents/: claude.agent.md  clean-code.agent.md  codex.agent.md  docs.agent.md  research.agent.md  review.agent.md  security.agent.md
.github/workflows/: audit.yml  ci-checks.yml  ci.yml  dependency-review.yml  release-please.yml  release.yml
benches/: analysis.rs
benchmarks/longmemeval/: Cargo.toml  README.md
benchmarks/longmemeval/src/: dataset.rs  ingest.rs  main.rs  metrics.rs
benchmarks/personamem/: Cargo.toml
benchmarks/personamem/src/: dataset.rs  main.rs  metrics.rs
crates/analysis/: Cargo.toml
crates/analysis/src/: classification.rs  extraction.rs  frequency.rs  injection.rs  lexicon.rs  lib.rs  prefilter.rs  recurrence.rs  scoring.rs  tokenizer.rs
crates/cli/: Cargo.toml  release.toml
crates/cli/src/: main.rs  transcript.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  engine.rs  entry.rs  lib.rs  session.rs  traits.rs
crates/napi/: Cargo.toml
crates/napi/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: adapter.rs  lib.rs  schema.rs  searcher.rs  storage.rs
docs/: ARCHITECTURE.md  claude-code-hooks.json  claude-code-setup.md  design-principles.md
examples/: basic.rs  chunked_distill.rs  lexicon.rs
extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json
extension/docs/: hooks-setup.md
extension/scripts/: pre-compact-hook.ps1  pre-compact-hook.sh
extension/src/: extension.ts  native.d.ts  types.ts
extension/src/commands/: clear.ts  save.ts
extension/src/hooks/: preCompact.ts
extension/src/providers/: contextProvider.ts
scripts/: VALIDATION.md  install.ps1  install.sh  transform_personamem_wh40k.py
src/: builder.rs  config.rs  engine.rs  entry.rs  error.rs  lib.rs  scrub.rs  session.rs  traits.rs
src/analysis/: classification.rs  frequency.rs  injection.rs  lexicon.rs  mod.rs  ngrams.rs  prefilter.rs  recurrence.rs  scoring.rs
src/distill/: mod.rs  openai_compat.rs
src/lexicon/: appender.rs  bootstrap.rs  config.rs  defaults.rs  english_defaults.toml  mod.rs
src/semantic/: fastembed_impl.rs  mod.rs
src/storage/: fts_index.rs  mod.rs  schema.rs  searcher.rs  turso_searcher.rs  turso_storage.rs
tests/: distill_live.rs  embedder_injection.rs  lexicon_scoring.rs  scoped_retrieval.rs  scrub_persistence.rs
