[package]
name = "context-forge"
version = "0.5.0-beta.1"
edition = "2021"
license = "MIT"
description = "Local-first persistent memory for LLM applications - SQLite + FTS5 BM25 retrieval, recency decay, token-budget context assembly, secret scrubbing, and optional local-LLM distillation."
repository = "https://github.com/asvarnon/context-forge"
readme = "README.md"
keywords = ["llm", "memory", "agent", "bm25", "sqlite"]
categories = ["database-implementations", "text-processing", "caching"]
exclude = [
    ".github/",
    "docs/",
    "scripts/",
    ".claude/",
    ".cargo/",
    ".gitignore",
    "cliff.toml",
    "release.toml",
    "CONTRIBUTING.md",
    "CHANGELOG.md",
    "rust-toolchain.toml",
]

[lib]
name = "context_forge"
path = "src/lib.rs"

[features]
default = ["analysis"]
analysis = ["dep:stop-words"]
parallel = ["dep:rayon", "analysis"]
distill-http = ["dep:reqwest"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stop-words = { version = "0.10.0", optional = true }
rusqlite = { version = "0.39", features = ["bundled-full"] }
r2d2 = "0.8"
r2d2_sqlite = "0.33"
uuid = { version = "1.7", features = ["v7"] }
regex = "1"
rayon = { version = "1", optional = true }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json"], optional = true }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "analysis"
harness = false
