[package]
name = "personamem-bench"
version = "0.0.0"
edition = "2021"
publish = false
description = "PersonaMem retrieval benchmark for context-forge: measures the lexicon-BENEFIT case (surfacing the current/salient user preference) — the complement to the LongMemEval cost benchmark. Dev-only; never published."

[dependencies]
context-forge = { path = "../..", features = ["semantic", "distill-http"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.4"
anyhow = "1"
