[package]
name = "cf-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cf"
path = "src/main.rs"

[dependencies]
cf-core = { path = "../core" }
cf-storage = { path = "../storage" }
cf-analysis = { path = "../analysis" }
clap = { workspace = true }
dirs = "5"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
